test/bad/loops/for13.px

for t in 1..2 by 1, 2 do
    skip
